Update index.html aqademiq rebrand

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/lovable-uploads/a7e50988-d887-4cef-8cd1-acdea8229c03.png" type="image/png">
     <title>Aqademiq - Intelligent Academic Organizer</title>
-    <meta name="description" content="AI-powered academic organizer with Ada assistant for smart schedule management and grade tracking" />
+    <meta name="description" content="AI-powered academic study hub with Ada assistant for smart schedule management and grade tracking" />
     <meta name="author" content="Ridhwan Ahamed" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap">
 
-    <meta property="og:title" content="Aqademiq - AI Academic Planning" />
-    <meta property="og:description" content="AI-powered academic organizer with intelligent schedule management, grade tracking, and study planning" />
+    <meta property="og:title" content="Aqademiq - AI Study Hub" />
+    <meta property="og:description" content="AI-powered academic study hub with intelligent schedule management, grade tracking, and study planning" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/lovable-uploads/3da2cc6a-6efe-4a8d-b167-ee7bbb0194a5.png" />
 
